apps/demo-app/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-demo-app
  labels:
    istio.io/dataplane-mode: ambient
    tier: application
