apps/demo-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  labels:
    app: demo-app
spec:
  selector:
    app: demo-app
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
